<?xml version="1.0" encoding="utf-8"?>
<!--
     Chris Bowles - 2/10/13
     SS12 Coding Competition 2013 Project
     main_activity.xml
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/dash"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/player_1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/player_2"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:text="@string/connection" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView3"
        android:text="@string/connection" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/checkBox1" >

        <RadioButton
            android:id="@+id/randomRadio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/random" />

        <RadioButton
            android:id="@+id/bearRadio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bear" />

        <RadioButton
            android:id="@+id/ninjaRadio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ninja" />

        <RadioButton
            android:id="@+id/cowboyRadio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cowboy" />

        <RadioButton
            android:id="@+id/beginRadio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/begin" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/checkBox2" >

        <RadioButton
            android:id="@+id/randomRadio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/random" />

        <RadioButton
            android:id="@+id/bearRadio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bear" />

        <RadioButton
            android:id="@+id/ninjaRadio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ninja" />

        <RadioButton
            android:id="@+id/cowboyRadio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cowboy" />

        <RadioButton
            android:id="@+id/beginRadio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/begin" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/radioGroup1"
        android:text="@string/stability" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/radioGroup2"
        android:text="@string/stability" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/button" />

</RelativeLayout>